<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="uber">Uber</string>
    <string name="starters">Entrées</string>
    <string name="dishes">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="droeat">DroEat</string>
    <string name="titleCat">Title</string>
    <string name="item">Item</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="icon">icon</string>
    <string name="cart">Cart</string>
    <string-array name="tab_starters">
        <item>Salade</item>
        <item>Soupes</item>
        <item>Tapas</item>
    </string-array>
    <string-array name="tab_mains">
        <item>Hamburger</item>
        <item>Steack et Frites</item>
        <item>Pizza</item>
        <item>Pâtes Carbonara</item>
        <item>Poisson</item>
    </string-array>
    <string-array name="tab_desserts">
        <item>Flan</item>
        <item>Brownie</item>
        <item>Café gourmand</item>
        <item>Crêpe au Nutella</item>
    </string-array>
</resources>